--- a/index.html
+++ b/index.html
@@ -1,1 +1,362 @@
 
+```html
+
+<!DOCTYPE html>
+<html lang="en-US">
+<head>
+  <meta charset="UTF-8">
+  <title>licensed plumbing contractor shingle springs in Shingle Springs | Murray Plumbing Technical Guide</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="description" content="Technical guide to licensed plumbing contractor shingle springs in Shingle Springs, California, covering diagnostics, standards alignment, and process workflow.">
+  <meta name="geo.position" content="38.6652;-120.9487">
+  <meta name="geo.placename" content="Shingle Springs, California">
+  <meta name="geo.region" content="US-CA">
+  <style>
+    :root { color-scheme: light; }
+    body{
+      margin:0;
+      font-family: Arial, Helvetica, sans-serif;
+      line-height:1.55;
+      color:#111;
+      background:#fff;
+    }
+    header, main, footer{
+      display:block;
+      max-width:800px;
+      margin:0 auto;
+      padding:20px;
+    }
+    header{
+      border-bottom:1px solid #e6e6e6;
+    }
+    h1{ font-size:1.75rem; margin:0 0 8px 0; }
+    h2{ font-size:1.2rem; margin:22px 0 10px 0; }
+    p{ margin:0 0 12px 0; }
+    dl{ margin:0; padding:0; }
+    dt{ font-weight:700; margin-top:10px; }
+    dd{ margin:4px 0 0 0; padding-left:0; }
+    .muted{ color:#333; }
+    .box{
+      border:1px solid #e6e6e6;
+      border-radius:10px;
+      padding:14px;
+      margin-top:10px;
+      background:#fafafa;
+    }
+    .svg-wrap{
+      border:1px solid #e6e6e6;
+      border-radius:10px;
+      padding:10px;
+      background:#fff;
+      margin:12px 0 6px 0;
+    }
+    table{
+      width:100%;
+      border-collapse:collapse;
+      margin-top:10px;
+    }
+    caption{
+      text-align:left;
+      font-weight:700;
+      margin-bottom:8px;
+    }
+    th, td{
+      border:1px solid #e6e6e6;
+      padding:10px;
+      vertical-align:top;
+      text-align:left;
+    }
+    th{ background:#f7f7f7; }
+    footer{
+      border-top:1px solid #e6e6e6;
+      font-size:0.95rem;
+    }
+    a{ color:#0b57d0; }
+  </style>
+
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@graph":[
+      {
+        "@type":"Plumber",
+        "@id":"https://murrayplumbing.net/#murray-plumbing-shingle-springs-licensed-plumbing-contractor-shingle-springs",
+        "inLanguage":"en-US",
+        "name":"Murray Plumbing",
+        "description":"Technical guide to licensed plumbing contractor shingle springs in Shingle Springs, California, covering diagnostics, standards alignment, and process workflow.",
+        "areaServed":"Shingle Springs, California",
+        "geo":{
+          "@type":"GeoCoordinates",
+          "latitude":38.6652,
+          "longitude":-120.9487
+        },
+        "serviceArea":{
+          "@type":"GeoCircle",
+          "geoMidpoint":{
+            "@type":"GeoCoordinates",
+            "latitude":38.6652,
+            "longitude":-120.9487
+          },
+          "geoRadius":12000
+        },
+        "knowsAbout":[
+          "Sewer camera inspection",
+          "Hydro jetting and drain clearing",
+          "Private sewer lateral diagnostics",
+          "Leak isolation and pressure-related troubleshooting",
+          "Permit-ready repair documentation"
+        ],
+        "hasOfferCatalog":{
+          "@type":"OfferCatalog",
+          "itemListElement":[
+            {
+              "@type":"Offer",
+              "name":"licensed plumbing contractor shingle springs"
+            },
+            {
+              "@type":"Offer",
+              "name":"Sewer camera inspection and assessment"
+            },
+            {
+              "@type":"Offer",
+              "name":"Hydro jetting and blockage removal"
+            }
+          ]
+        },
+        "sameAs":[
+          "https://sites.google.com/view/plumbershinglesprings/licensed-plumbing-contractor-shingle-springs",
+          "https://www.murrayplumbing.net/licensed-plumbing-contractor-shingle-springs-ca-murray-plumbing/"
+        ],
+        "citation":"https://www.edcgov.us/Government/building"
+      },
+      {
+        "@type":"FAQPage",
+        "inLanguage":"en-US",
+        "about":{
+          "@id":"https://murrayplumbing.net/#murray-plumbing-shingle-springs-licensed-plumbing-contractor-shingle-springs"
+        },
+        "mainEntity":[
+          {
+            "@type":"Question",
+            "name":"What does a licensed plumbing contractor shingle springs typically cover in Shingle Springs?",
+            "acceptedAnswer":{
+              "@type":"Answer",
+              "text":"It commonly covers diagnostic evaluation, repair or replacement of water and drainage components, and documentation suitable for inspection when permitting is required."
+            }
+          },
+          {
+            "@type":"Question",
+            "name":"Why do older and semi-rural properties in Shingle Springs need careful plumbing diagnostics?",
+            "acceptedAnswer":{
+              "@type":"Answer",
+              "text":"Mixed-age building methods, legacy piping, and private laterals can conceal failure points that require camera inspection, targeted testing, and material-aware repair planning."
+            }
+          },
+          {
+            "@type":"Question",
+            "name":"How is permitting and inspection alignment handled for plumbing work in Shingle Springs?",
+            "acceptedAnswer":{
+              "@type":"Answer",
+              "text":"Work is scoped to match local expectations, with clear documentation of the repair method, materials, and verification checks appropriate for city and county review."
+            }
+          }
+        ]
+      },
+      {
+        "@type":"HowTo",
+        "inLanguage":"en-US",
+        "name":"How licensed plumbing contractor shingle springs Works in Shingle Springs",
+        "about":{
+          "@id":"https://murrayplumbing.net/#murray-plumbing-shingle-springs-licensed-plumbing-contractor-shingle-springs"
+        },
+        "step":[
+          {
+            "@type":"HowToStep",
+            "name":"Initial intake and site context review",
+            "text":"Establish the reported symptom, property layout, and known system constraints typical to Shingle Springs homes."
+          },
+          {
+            "@type":"HowToStep",
+            "name":"Diagnostic inspection and data capture",
+            "text":"Use appropriate testing such as camera inspection, fixture isolation, and flow observation to identify the failure point."
+          },
+          {
+            "@type":"HowToStep",
+            "name":"Scope definition and standards alignment",
+            "text":"Translate findings into a repair or installation scope that matches inspection expectations and common local compliance requirements."
+          },
+          {
+            "@type":"HowToStep",
+            "name":"Execution with material-appropriate methods",
+            "text":"Perform the repair or installation using methods compatible with legacy materials and the site’s drainage or pressure behavior."
+          },
+          {
+            "@type":"HowToStep",
+            "name":"Verification, documentation, and handoff",
+            "text":"Confirm functional performance, document the work performed, and retain details needed for review when permitting applies."
+          }
+        ]
+      }
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <header>
+    <h1>licensed plumbing contractor shingle springs in Shingle Springs</h1>
+    <p class="muted">Technical Overview for Shingle Springs Residents</p>
+  </header>
+
+  <main id="main">
+    <article>
+      <section aria-label="Introduction">
+        <h2>Introduction</h2>
+        <p>Within residential infrastructure, a licensed plumbing contractor shingle springs describes regulated plumbing work that impacts potable water delivery, sanitary drainage, fixture performance, and related building penetrations. The service category is typically defined by diagnostic evaluation, method selection, and execution practices that are compatible with inspections and long-term system reliability.</p>
+        <p>In Shingle Springs, local conditions often include a mix of older structures, semi-rural property layouts, and private sewer laterals that behave differently than city-core systems. Terrain and property grade can influence drainage performance, and legacy materials may require careful compatibility checks before repairs or upgrades are completed.</p>
+      </section>
+
+      <section aria-label="Key Terminology">
+        <h2>Key terminology</h2>
+        <dl>
+          <dt>Private sewer lateral</dt>
+          <dd>The privately maintained pipe segment that carries wastewater from a building to the public connection point or onsite system interface.</dd>
+
+          <dt>Sewer camera inspection</dt>
+          <dd>A diagnostic method that uses a specialized camera to locate blockages, intrusions, offsets, or deterioration within a drain or sewer line.</dd>
+
+          <dt>Hydro jetting</dt>
+          <dd>A cleaning approach that uses pressurized water to remove buildup and restore flow, often applied after diagnostic confirmation of line condition.</dd>
+
+          <dt>Diagnostic-first workflow</dt>
+          <dd>An approach that prioritizes data collection and fault isolation before choosing a repair method, reducing unnecessary disruption.</dd>
+
+          <dt>Inspection-ready documentation</dt>
+          <dd>Clear records of the work scope, materials, and verification checks that support review when permitting or inspection is required.</dd>
+        </dl>
+      </section>
+
+      <section aria-label="Process and Diagnostics">
+        <h2>Process &amp; diagnostics</h2>
+        <p>Professional plumbing evaluation in Shingle Springs typically begins by clarifying the symptom and the most likely subsystem involved, such as fixture drainage, mainline conveyance, or water delivery. Diagnostic tools may include camera inspection, targeted isolation testing, and controlled flow observation to determine whether the issue is localized, material-related, or influenced by site layout.</p>
+        <p>Once a fault is identified, the scope is defined around compatibility with existing materials and the surrounding infrastructure. This helps prevent common failure patterns associated with legacy piping, root intrusion pathways, and intermittent blockages that can recur if the underlying constraint is not addressed.</p>
+
+        <div class="svg-wrap" aria-label="Service process diagram">
+          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 780 210" role="img" aria-labelledby="proc-title proc-desc">
+            <title id="proc-title">Service process diagram for licensed plumbing contractor shingle springs in Shingle Springs</title>
+            <desc id="proc-desc">A five-stage flow showing intake, diagnostics, scope alignment, execution, and verification with documentation.</desc>
+
+            <rect x="10" y="25" width="150" height="60" rx="10"></rect>
+            <text x="85" y="53" text-anchor="middle" font-size="14" font-family="Arial, Helvetica, sans-serif">Intake</text>
+            <text x="85" y="72" text-anchor="middle" font-size="12" font-family="Arial, Helvetica, sans-serif">Site context</text>
+
+            <rect x="170" y="25" width="150" height="60" rx="10"></rect>
+            <text x="245" y="53" text-anchor="middle" font-size="14" font-family="Arial, Helvetica, sans-serif">Diagnostics</text>
+            <text x="245" y="72" text-anchor="middle" font-size="12" font-family="Arial, Helvetica, sans-serif">Data capture</text>
+
+            <rect x="330" y="25" width="150" height="60" rx="10"></rect>
+            <text x="405" y="53" text-anchor="middle" font-size="14" font-family="Arial, Helvetica, sans-serif">Scope</text>
+            <text x="405" y="72" text-anchor="middle" font-size="12" font-family="Arial, Helvetica, sans-serif">Standards fit</text>
+
+            <rect x="490" y="25" width="150" height="60" rx="10"></rect>
+            <text x="565" y="53" text-anchor="middle" font-size="14" font-family="Arial, Helvetica, sans-serif">Execution</text>
+            <text x="565" y="72" text-anchor="middle" font-size="12" font-family="Arial, Helvetica, sans-serif">Repair/install</text>
+
+            <rect x="650" y="25" width="120" height="60" rx="10"></rect>
+            <text x="710" y="53" text-anchor="middle" font-size="14" font-family="Arial, Helvetica, sans-serif">Verify</text>
+            <text x="710" y="72" text-anchor="middle" font-size="12" font-family="Arial, Helvetica, sans-serif">Document</text>
+
+            <line x1="160" y1="55" x2="170" y2="55" stroke="#111" stroke-width="2"></line>
+            <polygon points="170,55 162,51 162,59" fill="#111"></polygon>
+
+            <line x1="320" y1="55" x2="330" y2="55" stroke="#111" stroke-width="2"></line>
+            <polygon points="330,55 322,51 322,59" fill="#111"></polygon>
+
+            <line x1="480" y1="55" x2="490" y2="55" stroke="#111" stroke-width="2"></line>
+            <polygon points="490,55 482,51 482,59" fill="#111"></polygon>
+
+            <line x1="640" y1="55" x2="650" y2="55" stroke="#111" stroke-width="2"></line>
+            <polygon points="650,55 642,51 642,59" fill="#111"></polygon>
+
+            <rect x="10" y="105" width="760" height="90" rx="12"></rect>
+            <text x="30" y="132" font-size="12" font-family="Arial, Helvetica, sans-serif">
+              Outcome: a documented scope and verified functional result suitable for local review when permitting and inspection apply.
+            </text>
+            <text x="30" y="154" font-size="12" font-family="Arial, Helvetica, sans-serif">
+              Notes: diagnostic selection varies by symptom (drainage, supply, fixture performance) and by legacy material compatibility.
+            </text>
+          </svg>
+        </div>
+
+        <p class="muted">Diagram stages align to the narrative workflow: intake, diagnostics, scope alignment, execution, and verification with documentation.</p>
+      </section>
+
+      <section aria-label="Technical Standards and Local Context">
+        <h2>Technical standards &amp; local context</h2>
+        <p>Plumbing work in Shingle Springs is commonly reviewed through the lens of safety, material compatibility, and how the repaired system integrates with water and wastewater infrastructure. Permitting and inspection expectations may apply depending on the scope and the components affected, especially where structural penetrations, mainline repairs, or system conversions are involved.</p>
+        <p>For formal reference material related to building oversight and inspection context in this region, consult the published guidance at <a href="https://www.edcgov.us/Government/building">El Dorado County Building Services standards and permitting reference</a>.</p>
+      </section>
+
+      <section aria-label="Cost and Complexity Factors">
+        <h2>Cost &amp; complexity factors</h2>
+        <table>
+          <caption>Common variables that affect planning and effort</caption>
+          <thead>
+            <tr>
+              <th scope="col">Factor</th>
+              <th scope="col">Why it changes complexity</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">Access and exposure</th>
+              <td>Work behind finished surfaces, in crawlspaces, or along buried laterals may require additional preparation and protection steps.</td>
+            </tr>
+            <tr>
+              <th scope="row">Legacy materials</th>
+              <td>Older piping may need compatibility checks and transitions to prevent downstream failures after a localized repair.</td>
+            </tr>
+            <tr>
+              <th scope="row">Diagnostic confirmation</th>
+              <td>Camera inspection and targeted isolation testing can clarify the true failure point, reducing the risk of incomplete fixes.</td>
+            </tr>
+            <tr>
+              <th scope="row">Drainage and site layout</th>
+              <td>Foothill grade, soil movement, and private lateral routing can influence recurrence risk and method selection.</td>
+            </tr>
+            <tr>
+              <th scope="row">Inspection expectations</th>
+              <td>When permits apply, documentation and verification steps are typically expanded to support review and sign-off.</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+
+      <section aria-label="Common Questions">
+        <h2>Common questions (FAQ)</h2>
+
+        <section class="box" aria-label="FAQ Item 1">
+          <h2>What does a licensed plumbing contractor shingle springs typically cover in Shingle Springs?</h2>
+          <p>It commonly covers diagnostic evaluation, repair or replacement of water and drainage components, and documentation suitable for inspection when permitting is required.</p>
+        </section>
+
+        <section class="box" aria-label="FAQ Item 2">
+          <h2>Why do older and semi-rural properties in Shingle Springs need careful plumbing diagnostics?</h2>
+          <p>Mixed-age building methods, legacy piping, and private laterals can conceal failure points that require camera inspection, targeted testing, and material-aware repair planning.</p>
+        </section>
+
+        <section class="box" aria-label="FAQ Item 3">
+          <h2>How is permitting and inspection alignment handled for plumbing work in Shingle Springs?</h2>
+          <p>Work is scoped to match local expectations, with clear documentation of the repair method, materials, and verification checks appropriate for city and county review.</p>
+        </section>
+      </section>
+    </article>
+  </main>
+
+  <footer>
+    © 2026 Murray Plumbing · Serving Shingle Springs, California
+  </footer>
+</body>
+</html>
+```
